@@ -55,11 +55,14 @@ Create account category::
     >>> account_category.account_expense = expense
     >>> account_category.account_revenue = revenue
     >>> account_category.save()
+    >>> category = ProductCategory(name="Category")
+    >>> category.save()
 
 Create products::
 
     >>> ProductUom = Model.get('product.uom')
     >>> ProductTemplate = Model.get('product.template')
+    >>> Product = Model.get('product.product')
     >>> unit, = ProductUom.find([('name', '=', 'Unit')])
     >>> template = ProductTemplate()
     >>> template.name = 'Product'
@@ -68,10 +71,13 @@ Create products::
     >>> template.list_price = Decimal('300')
     >>> template.cost_price_method = 'average'
     >>> template.account_category = account_category
+    >>> template.categories.append(ProductCategory(category.id))
     >>> product, = template.products
     >>> product.cost_price = Decimal('80')
     >>> template.save()
     >>> product, = template.products
+    >>> template2, = template.duplicate(default={'categories': None})
+    >>> product2, = template2.products
 
     >>> template = ProductTemplate()
     >>> template.name = 'Landed Cost'
@@ -114,6 +120,13 @@ Receive 10 unit of the product @ 100::
     >>> move.to_location = input_loc
     >>> move.unit_price = Decimal('100')
 
+    >>> move = shipment.incoming_moves.new()
+    >>> move.product = product2
+    >>> move.quantity = 1
+    >>> move.from_location = supplier_loc
+    >>> move.to_location = input_loc
+    >>> move.unit_price = Decimal('10')
+
     >>> move_empty = shipment.incoming_moves.new()
     >>> move_empty.product = product
     >>> move_empty.quantity = 0
@@ -122,9 +135,8 @@ Receive 10 unit of the product @ 100::
     >>> move_empty.unit_price = Decimal('100')
 
     >>> shipment.click('receive')
-    >>> move, = [m for m in shipment.incoming_moves if m.quantity]
-    >>> move.unit_price
-    Decimal('100')
+    >>> sorted([m.unit_price for m in shipment.incoming_moves if m.quantity])
+    [Decimal('10'), Decimal('100')]
 
 Invoice landed cost::
 
@@ -149,6 +161,8 @@ Add landed cost::
     >>> invoice_line, = landed_cost.invoice_lines.find([])
     >>> landed_cost.invoice_lines.append(invoice_line)
     >>> landed_cost.allocation_method = 'value'
+    >>> landed_cost.categories.append(ProductCategory(category.id))
+    >>> landed_cost.products.append(Product(product.id))
     >>> landed_cost.save()
     >>> landed_cost.state
     'draft'
@@ -160,9 +174,9 @@ Add landed cost::
 
 Check move unit price is 101::
 
-    >>> move.reload()
-    >>> move.unit_price
-    Decimal('101.0000')
+    >>> shipment.reload()
+    >>> sorted([m.unit_price for m in shipment.incoming_moves if m.quantity])
+    [Decimal('10'), Decimal('101.0000')]
 
 Landed cost is cleared when duplicated invoice::
 
@@ -178,6 +192,6 @@ Cancel landed cost reset unit price::
     'cancelled'
     >>> landed_cost.posted_date
 
-    >>> move.reload()
-    >>> move.unit_price
-    Decimal('100.0000')
+    >>> shipment.reload()
+    >>> sorted([m.unit_price for m in shipment.incoming_moves if m.quantity])
+    [Decimal('10'), Decimal('100.0000')]
