@@ -12,3 +12,4 @@ extra_depends:
 xml:
     account.xml
     product.xml
+    message.xml
