@@ -1,3 +1,4 @@
+* Add stock move filter per category and product
 * Allow posted landed cost to be cancelled
 * Add landed cost relate from supplier shipment
 * Rename landed cost state from cancel to cancelled
